--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.136.0",
+    "three-stdlib": "^2.8.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
