--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@laufire/resist": "^0.0.5",
     "@laufire/utils": "^2.9.2",
+    "@react-three/a11y": "^2.2.3",
     "@react-three/drei": "^8.4.0",
     "@react-three/fiber": "^7.0.24",
     "leva": "^0.9.18",
